--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Extensive Cybersecurity RSS Reader</title>
+    <title>Security News Dashboard</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Custom styles for better aesthetics */
+        /* Custom styles for a security dashboard aesthetic */
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f0f2f5;
+            background-color: #1a1a1a; /* Changed to a softer, general dark grey */
             display: flex;
             justify-content: center;
             align-items: flex-start; /* Align to top for longer content */
@@ -19,27 +19,95 @@
             box-sizing: border-box;
         }
         .container {
-            background-color: #ffffff;
+            background-color: #1e293b; /* Slightly lighter dark blue-grey for container */
             border-radius: 12px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            padding: 30px;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5); /* Stronger, more prominent shadow */
+            padding: 40px;
             max-width: 900px;
             width: 100%;
-            margin-top: 20px;
+            margin-top: 30px;
+            border: 1px solid #334155; /* Subtle border for definition */
+        }
+        h1 {
+            color: #e2e8f0; /* Light off-white for headings */
+            font-size: 2.5rem;
+            font-weight: 700;
+            margin-bottom: 30px;
+            text-align: center;
+            letter-spacing: -0.025em; /* Slightly tighter letter spacing */
+        }
+        label {
+            color: #94a3b8; /* Muted blue-grey for labels */
+            font-weight: 500;
+            margin-bottom: 8px; /* Space below label */
+        }
+        select {
+            background-color: #2d3748; /* Slightly lighter dark background for select */
+            color: #f8fafc; /* Near-white text for select */
+            border: 1px solid #5a6b80; /* Made border slightly lighter for better visibility */
+            padding: 18px 24px; /* INCREASED PADDING for more space */
+            border-radius: 10px; /* More rounded corners */
+            transition: all 0.2s ease-in-out;
+            appearance: none; /* Remove default arrow */
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23f8fafc' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"); /* Light arrow */
+            background-repeat: no-repeat;
+            background-position: right 1.5rem center; /* Adjusted arrow position for new padding */
+            background-size: 0.75em auto; /* Slightly larger arrow */
+            cursor: pointer;
+            box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.4); /* Subtle inner shadow, slightly darker */
+            text-align: center; /* Centered text inside the dropdown */
+            text-align-last: center; /* Ensures centering in Firefox and when not focused */
+        }
+        select:hover {
+            border-color: #22c55e; /* Vibrant green border on hover */
+            box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5), 0 0 0 2px rgba(34, 197, 94, 0.3); /* Inner shadow + subtle outer glow */
+        }
+        select:focus {
+            border-color: #22c55e; /* Vibrant green focus ring */
+            box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5), 0 0 0 3px rgba(34, 197, 94, 0.6); /* Green glow */
+            outline: none;
         }
         .article-card {
-            border-bottom: 1px solid #e5e7eb;
-            padding-bottom: 20px;
+            background-color: #1e293b; /* Same as container for seamless look */
+            border: 1px solid #334155; /* Subtle border for cards */
+            padding: 20px;
             margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Dark shadow for cards */
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out, border-color 0.2s ease-in-out;
+        }
+        .article-card:hover {
+            transform: translateY(-5px); /* Lift effect on hover */
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+            border-color: #22c55e; /* Green border on hover */
         }
         .article-card:last-child {
             border-bottom: none;
             margin-bottom: 0;
-            padding-bottom: 0;
+        }
+        .article-card h2 a {
+            color: #22c55e; /* Vibrant green for links */
+            font-size: 1.5rem;
+            font-weight: 600;
+            transition: color 0.2s ease-in-out;
+        }
+        .article-card h2 a:hover {
+            color: #4ade80; /* Lighter green on hover */
+            text-decoration: underline;
+        }
+        .article-card p {
+            color: #cbd5e1; /* Light grey for description text */
+            line-height: 1.6;
+            margin-top: 8px;
+        }
+        .article-card p.text-sm {
+            color: #94a3b8; /* Muted blue-grey for date */
+            font-size: 0.9rem;
+            margin-bottom: 5px;
         }
         .loading-spinner {
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid #3498db;
+            border: 4px solid #475569; /* Darker spinner border */
+            border-top: 4px solid #22c55e; /* Vibrant green spinner top */
             border-radius: 50%;
             width: 30px;
             height: 30px;
@@ -50,15 +118,25 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+        .error-message {
+            background-color: #ef4444; /* Red background for error */
+            border: 1px solid #dc2626; /* Darker red border */
+            color: #fee2e2; /* Very light red text */
+            padding: 15px 20px;
+            border-radius: 8px;
+            font-weight: 600;
+            text-align: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1 class="text-3xl font-bold text-gray-800 mb-6 text-center">Extensive Cybersecurity News Feeds</h1>
+        <h1>Extensive Cybersecurity News Feeds</h1>
 
-        <div class="mb-6">
-            <label for="feed-select" class="block text-gray-700 text-sm font-bold mb-2">Select a News Source:</label>
-            <select id="feed-select" class="block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+        <div class="mb-8 flex flex-col items-center">
+            <label for="feed-select" class="block text-sm font-medium mb-2">Select a News Source:</label>
+            <select id="feed-select" class="w-full max-w-md">
                 <!-- Extensive list of cybersecurity RSS feeds -->
                 <option value="https://www.bleepingcomputer.com/feed/">BleepingComputer</option>
                 <option value="https://feeds.feedburner.com/TheHackersNews">The Hacker News (Feedburner)</option>
@@ -92,7 +170,7 @@
         <div id="rss-feed-container" class="space-y-6">
             <!-- RSS feed items will be loaded here -->
         </div>
-        <div id="error-message" class="hidden bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mt-6" role="alert">
+        <div id="error-message" class="hidden error-message mt-6" role="alert">
             <strong class="font-bold">Error!</strong>
             <span class="block sm:inline" id="error-text"></span>
         </div>
